@@ -1,3 +1,7 @@
+2010-06-19 Francois Suter  <francois@typo3.org>
+
+	* Fixed bug: #14184: Scheduler: Handle invalid serialized exception objects
+
 2010-06-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14464: htmlArea RTE: Type of block accumulation if the block is manually selected in Safari
